--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,25 @@
 /*  your css code here. If applicable */
+h1 {
+    color: #2a7ae2; /* Blue */
+}
+
+h2 {
+    color: #f44336; /* Red */
+}
+
+h3 {
+    color: #4caf50; /* Green */
+}
+
+h4 {
+    color: #ff9800; /* Orange */
+}
+
+h5 {
+    color: #607d8b; /* Grey */
+}
+
+h6 {
+    color: #ffeb3b; /* Yellow */
+}
+
